tests/paczka1/fuzzy1/51382507.err
Error in line 8: A4 S219 16,3
Error in line 2: xii178GKX S533 59,2
Error in line 13: A4 S219 7,8
Error in line 14: 9hQ2bwzDb S533 75,25
Error in line 7: 9hQ2bwzDb S219 24,0
Error in line 17: sE1qe A4 76,9
Error in line 22: 9hQ2bwzDb S533 95,1
Error in line 26: 0hm A4 19,7
